force-app/main/default/objects/WorkOrderSets__x/WorkOrderSets__x.object-meta.xml
<CustomObject>
    <description>WorkOrderSets</description>
    <externalDataSource>AusNet_OData</externalDataSource>
    <externalName>WorkOrderSets</externalName>
    <label>WorkOrderSets</label>
    <pluralLabel>WorkOrderSets</pluralLabel>
</CustomObject>