force-app/main/default/objects/WorkOrderSets__x/fields/AbcIndicator__c.field-meta.xml
<CustomField>
    <fullName>AbcIndicator__c</fullName>
    <description>AbcIndicator</description>
    <externalDeveloperName>AbcIndicator</externalDeveloperName>
    <label>AbcIndicator</label>
    <length>128</length>
    <type>Text</type>
</CustomField>