force-app/main/default/objects/WorkOrderSets__x/fields/AddressCity__c.field-meta.xml
<CustomField>
    <fullName>AddressCity__c</fullName>
    <description>AddressCity</description>
    <externalDeveloperName>AddressCity</externalDeveloperName>
    <label>AddressCity</label>
    <length>128</length>
    <type>Text</type>
</CustomField>