force-app/main/default/objects/WorkOrderSets__x/fields/AddressCountry__c.field-meta.xml
<CustomField>
    <fullName>AddressCountry__c</fullName>
    <description>AddressCountry</description>
    <externalDeveloperName>AddressCountry</externalDeveloperName>
    <label>AddressCountry</label>
    <length>128</length>
    <type>Text</type>
</CustomField>