force-app/main/default/objects/WorkOrderSets__x/fields/AddressEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>AddressEmailAddress__c</fullName>
    <description>AddressEmailAddress</description>
    <externalDeveloperName>AddressEmailAddress</externalDeveloperName>
    <label>AddressEmailAddress</label>
    <length>128</length>
    <type>Text</type>
</CustomField>