force-app/main/default/objects/WorkOrderSets__x/fields/AddressHouseNumber1__c.field-meta.xml
<CustomField>
    <fullName>AddressHouseNumber1__c</fullName>
    <description>AddressHouseNumber1</description>
    <externalDeveloperName>AddressHouseNumber1</externalDeveloperName>
    <label>AddressHouseNumber1</label>
    <length>128</length>
    <type>Text</type>
</CustomField>