force-app/main/default/objects/WorkOrderSets__x/fields/AddressHouseNumber2__c.field-meta.xml
<CustomField>
    <fullName>AddressHouseNumber2__c</fullName>
    <description>AddressHouseNumber2</description>
    <externalDeveloperName>AddressHouseNumber2</externalDeveloperName>
    <label>AddressHouseNumber2</label>
    <length>128</length>
    <type>Text</type>
</CustomField>