force-app/main/default/objects/WorkOrderSets__x/fields/AddressMobileNumber__c.field-meta.xml
<CustomField>
    <fullName>AddressMobileNumber__c</fullName>
    <description>AddressMobileNumber</description>
    <externalDeveloperName>AddressMobileNumber</externalDeveloperName>
    <label>AddressMobileNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>