force-app/main/default/objects/WorkOrderSets__x/fields/AddressName1__c.field-meta.xml
<CustomField>
    <fullName>AddressName1__c</fullName>
    <description>AddressName1</description>
    <externalDeveloperName>AddressName1</externalDeveloperName>
    <label>AddressName1</label>
    <length>128</length>
    <type>Text</type>
</CustomField>