force-app/main/default/objects/WorkOrderSets__x/fields/AddressName2__c.field-meta.xml
<CustomField>
    <fullName>AddressName2__c</fullName>
    <description>AddressName2</description>
    <externalDeveloperName>AddressName2</externalDeveloperName>
    <label>AddressName2</label>
    <length>128</length>
    <type>Text</type>
</CustomField>