force-app/main/default/objects/WorkOrderSets__x/fields/AddressPoBox__c.field-meta.xml
<CustomField>
    <fullName>AddressPoBox__c</fullName>
    <description>AddressPoBox</description>
    <externalDeveloperName>AddressPoBox</externalDeveloperName>
    <label>AddressPoBox</label>
    <length>128</length>
    <type>Text</type>
</CustomField>