force-app/main/default/objects/WorkOrderSets__x/fields/AddressPostCode__c.field-meta.xml
<CustomField>
    <fullName>AddressPostCode__c</fullName>
    <description>AddressPostCode</description>
    <externalDeveloperName>AddressPostCode</externalDeveloperName>
    <label>AddressPostCode</label>
    <length>128</length>
    <type>Text</type>
</CustomField>