force-app/main/default/objects/WorkOrderSets__x/fields/AddressRegion__c.field-meta.xml
<CustomField>
    <fullName>AddressRegion__c</fullName>
    <description>AddressRegion</description>
    <externalDeveloperName>AddressRegion</externalDeveloperName>
    <label>AddressRegion</label>
    <length>128</length>
    <type>Text</type>
</CustomField>