force-app/main/default/objects/WorkOrderSets__x/fields/AddressStreet__c.field-meta.xml
<CustomField>
    <fullName>AddressStreet__c</fullName>
    <description>AddressStreet</description>
    <externalDeveloperName>AddressStreet</externalDeveloperName>
    <label>AddressStreet</label>
    <length>128</length>
    <type>Text</type>
</CustomField>