force-app/main/default/objects/WorkOrderSets__x/fields/AddressTelephoneNumber__c.field-meta.xml
<CustomField>
    <fullName>AddressTelephoneNumber__c</fullName>
    <description>AddressTelephoneNumber</description>
    <externalDeveloperName>AddressTelephoneNumber</externalDeveloperName>
    <label>AddressTelephoneNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>