force-app/main/default/objects/WorkOrderSets__x/fields/AddressTitle__c.field-meta.xml
<CustomField>
    <fullName>AddressTitle__c</fullName>
    <description>AddressTitle</description>
    <externalDeveloperName>AddressTitle</externalDeveloperName>
    <label>AddressTitle</label>
    <length>128</length>
    <type>Text</type>
</CustomField>