force-app/main/default/objects/WorkOrderSets__x/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>Application</description>
    <externalDeveloperName>Application</externalDeveloperName>
    <label>Application</label>
    <length>128</length>
    <type>Text</type>
</CustomField>