force-app/main/default/objects/WorkOrderSets__x/fields/AssemblyDescription__c.field-meta.xml
<CustomField>
    <fullName>AssemblyDescription__c</fullName>
    <description>AssemblyDescription</description>
    <externalDeveloperName>AssemblyDescription</externalDeveloperName>
    <label>AssemblyDescription</label>
    <length>128</length>
    <type>Text</type>
</CustomField>