force-app/main/default/objects/WorkOrderSets__x/fields/ConstructionMeasureNumber__c.field-meta.xml
<CustomField>
    <fullName>ConstructionMeasureNumber__c</fullName>
    <description>ConstructionMeasureNumber</description>
    <externalDeveloperName>ConstructionMeasureNumber</externalDeveloperName>
    <label>ConstructionMeasureNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>