force-app/main/default/objects/WorkOrderSets__x/fields/ConstructionMeasureText__c.field-meta.xml
<CustomField>
    <fullName>ConstructionMeasureText__c</fullName>
    <description>ConstructionMeasureText</description>
    <externalDeveloperName>ConstructionMeasureText</externalDeveloperName>
    <label>ConstructionMeasureText</label>
    <length>128</length>
    <type>Text</type>
</CustomField>