force-app/main/default/objects/WorkOrderSets__x/fields/CreatedOn__c.field-meta.xml
<CustomField>
    <fullName>CreatedOn__c</fullName>
    <description>CreatedOn</description>
    <externalDeveloperName>CreatedOn</externalDeveloperName>
    <label>CreatedOn</label>
    <length>128</length>
    <type>Text</type>
</CustomField>