force-app/main/default/objects/WorkOrderSets__x/fields/CreatedTime__c.field-meta.xml
<CustomField>
    <fullName>CreatedTime__c</fullName>
    <description>CreatedTime</description>
    <externalDeveloperName>CreatedTime</externalDeveloperName>
    <label>CreatedTime</label>
    <length>128</length>
    <type>Text</type>
</CustomField>