force-app/main/default/objects/WorkOrderSets__x/fields/DesignOfficerName__c.field-meta.xml
<CustomField>
    <fullName>DesignOfficerName__c</fullName>
    <description>DesignOfficerName</description>
    <externalDeveloperName>DesignOfficerName</externalDeveloperName>
    <label>DesignOfficerName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>