force-app/main/default/objects/WorkOrderSets__x/fields/EquipmentNumber__c.field-meta.xml
<CustomField>
    <fullName>EquipmentNumber__c</fullName>
    <description>EquipmentNumber</description>
    <externalDeveloperName>EquipmentNumber</externalDeveloperName>
    <label>EquipmentNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>