force-app/main/default/objects/WorkOrderSets__x/fields/FinishDate__c.field-meta.xml
<CustomField>
    <fullName>FinishDate__c</fullName>
    <description>FinishDate</description>
    <externalDeveloperName>FinishDate</externalDeveloperName>
    <label>FinishDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>