force-app/main/default/objects/WorkOrderSets__x/fields/FinishTime__c.field-meta.xml
<CustomField>
    <fullName>FinishTime__c</fullName>
    <description>FinishTime</description>
    <externalDeveloperName>FinishTime</externalDeveloperName>
    <label>FinishTime</label>
    <length>128</length>
    <type>Text</type>
</CustomField>