force-app/main/default/objects/WorkOrderSets__x/fields/FireZone__c.field-meta.xml
<CustomField>
    <fullName>FireZone__c</fullName>
    <description>FireZone</description>
    <externalDeveloperName>FireZone</externalDeveloperName>
    <label>FireZone</label>
    <length>128</length>
    <type>Text</type>
</CustomField>