force-app/main/default/objects/WorkOrderSets__x/fields/GroupCounter__c.field-meta.xml
<CustomField>
    <fullName>GroupCounter__c</fullName>
    <description>GroupCounter</description>
    <externalDeveloperName>GroupCounter</externalDeveloperName>
    <label>GroupCounter</label>
    <length>128</length>
    <type>Text</type>
</CustomField>