force-app/main/default/objects/WorkOrderSets__x/fields/HeaderLongText__c.field-meta.xml
<CustomField>
    <fullName>HeaderLongText__c</fullName>
    <description>HeaderLongText</description>
    <externalDeveloperName>HeaderLongText</externalDeveloperName>
    <label>HeaderLongText</label>
    <length>128</length>
    <type>Text</type>
</CustomField>