force-app/main/default/objects/WorkOrderSets__x/fields/IncidentCategory__c.field-meta.xml
<CustomField>
    <fullName>IncidentCategory__c</fullName>
    <description>IncidentCategory</description>
    <externalDeveloperName>IncidentCategory</externalDeveloperName>
    <label>IncidentCategory</label>
    <length>128</length>
    <type>Text</type>
</CustomField>