force-app/main/default/objects/WorkOrderSets__x/fields/MaintenanceActivityType__c.field-meta.xml
<CustomField>
    <fullName>MaintenanceActivityType__c</fullName>
    <description>MaintenanceActivityType</description>
    <externalDeveloperName>MaintenanceActivityType</externalDeveloperName>
    <label>MaintenanceActivityType</label>
    <length>128</length>
    <type>Text</type>
</CustomField>