force-app/main/default/objects/WorkOrderSets__x/fields/MaintenanceItem__c.field-meta.xml
<CustomField>
    <fullName>MaintenanceItem__c</fullName>
    <description>MaintenanceItem</description>
    <externalDeveloperName>MaintenanceItem</externalDeveloperName>
    <label>MaintenanceItem</label>
    <length>128</length>
    <type>Text</type>
</CustomField>