force-app/main/default/objects/WorkOrderSets__x/fields/MaintenancePlan__c.field-meta.xml
<CustomField>
    <fullName>MaintenancePlan__c</fullName>
    <description>MaintenancePlan</description>
    <externalDeveloperName>MaintenancePlan</externalDeveloperName>
    <label>MaintenancePlan</label>
    <length>128</length>
    <type>Text</type>
</CustomField>