force-app/main/default/objects/WorkOrderSets__x/fields/MaintenancePlanCallNumber__c.field-meta.xml
<CustomField>
    <fullName>MaintenancePlanCallNumber__c</fullName>
    <description>MaintenancePlanCallNumber</description>
    <externalDeveloperName>MaintenancePlanCallNumber</externalDeveloperName>
    <label>MaintenancePlanCallNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>