force-app/main/default/objects/WorkOrderSets__x/fields/MainWorkCentrePlant__c.field-meta.xml
<CustomField>
    <fullName>MainWorkCentrePlant__c</fullName>
    <description>MainWorkCentrePlant</description>
    <externalDeveloperName>MainWorkCentrePlant</externalDeveloperName>
    <label>MainWorkCentrePlant</label>
    <length>128</length>
    <type>Text</type>
</CustomField>