force-app/main/default/objects/WorkOrderSets__x/fields/NetworkAccessRequestRef__c.field-meta.xml
<CustomField>
    <fullName>NetworkAccessRequestRef__c</fullName>
    <description>NetworkAccessRequestRef</description>
    <externalDeveloperName>NetworkAccessRequestRef</externalDeveloperName>
    <label>NetworkAccessRequestRef</label>
    <length>128</length>
    <type>Text</type>
</CustomField>