force-app/main/default/objects/WorkOrderSets__x/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <description>OrderNumber</description>
    <externalDeveloperName>OrderNumber</externalDeveloperName>
    <label>OrderNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>