force-app/main/default/objects/WorkOrderSets__x/fields/OrderType__c.field-meta.xml
<CustomField>
    <fullName>OrderType__c</fullName>
    <description>OrderType</description>
    <externalDeveloperName>OrderType</externalDeveloperName>
    <label>OrderType</label>
    <length>128</length>
    <type>Text</type>
</CustomField>