force-app/main/default/objects/WorkOrderSets__x/fields/PlannerGroup__c.field-meta.xml
<CustomField>
    <fullName>PlannerGroup__c</fullName>
    <description>PlannerGroup</description>
    <externalDeveloperName>PlannerGroup</externalDeveloperName>
    <label>PlannerGroup</label>
    <length>128</length>
    <type>Text</type>
</CustomField>