force-app/main/default/objects/WorkOrderSets__x/fields/PlantSection__c.field-meta.xml
<CustomField>
    <fullName>PlantSection__c</fullName>
    <description>PlantSection</description>
    <externalDeveloperName>PlantSection</externalDeveloperName>
    <label>PlantSection</label>
    <length>128</length>
    <type>Text</type>
</CustomField>