force-app/main/default/objects/WorkOrderSets__x/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Priority</description>
    <externalDeveloperName>Priority</externalDeveloperName>
    <label>Priority</label>
    <length>128</length>
    <type>Text</type>
</CustomField>