force-app/main/default/objects/WorkOrderSets__x/fields/PriorityDescription__c.field-meta.xml
<CustomField>
    <fullName>PriorityDescription__c</fullName>
    <description>PriorityDescription</description>
    <externalDeveloperName>PriorityDescription</externalDeveloperName>
    <label>PriorityDescription</label>
    <length>128</length>
    <type>Text</type>
</CustomField>