force-app/main/default/objects/WorkOrderSets__x/fields/ProjectOfficeName__c.field-meta.xml
<CustomField>
    <fullName>ProjectOfficeName__c</fullName>
    <description>ProjectOfficeName</description>
    <externalDeveloperName>ProjectOfficeName</externalDeveloperName>
    <label>ProjectOfficeName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>