force-app/main/default/objects/WorkOrderSets__x/fields/Revision__c.field-meta.xml
<CustomField>
    <fullName>Revision__c</fullName>
    <description>Revision</description>
    <externalDeveloperName>Revision</externalDeveloperName>
    <label>Revision</label>
    <length>128</length>
    <type>Text</type>
</CustomField>