force-app/main/default/objects/WorkOrderSets__x/fields/RoutingNumber__c.field-meta.xml
<CustomField>
    <fullName>RoutingNumber__c</fullName>
    <description>RoutingNumber</description>
    <externalDeveloperName>RoutingNumber</externalDeveloperName>
    <label>RoutingNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>