force-app/main/default/objects/WorkOrderSets__x/fields/SerialNo__c.field-meta.xml
<CustomField>
    <fullName>SerialNo__c</fullName>
    <description>SerialNo</description>
    <externalDeveloperName>SerialNo</externalDeveloperName>
    <label>SerialNo</label>
    <length>128</length>
    <type>Text</type>
</CustomField>