force-app/main/default/objects/WorkOrderSets__x/fields/SortField__c.field-meta.xml
<CustomField>
    <fullName>SortField__c</fullName>
    <description>SortField</description>
    <externalDeveloperName>SortField</externalDeveloperName>
    <label>SortField</label>
    <length>128</length>
    <type>Text</type>
</CustomField>