force-app/main/default/objects/WorkOrderSets__x/fields/SourceSystemComments__c.field-meta.xml
<CustomField>
    <fullName>SourceSystemComments__c</fullName>
    <description>SourceSystemComments</description>
    <externalDeveloperName>SourceSystemComments</externalDeveloperName>
    <label>SourceSystemComments</label>
    <length>128</length>
    <type>Text</type>
</CustomField>