force-app/main/default/objects/WorkOrderSets__x/fields/SourceSystemReference__c.field-meta.xml
<CustomField>
    <fullName>SourceSystemReference__c</fullName>
    <description>SourceSystemReference</description>
    <externalDeveloperName>SourceSystemReference</externalDeveloperName>
    <label>SourceSystemReference</label>
    <length>128</length>
    <type>Text</type>
</CustomField>