force-app/main/default/objects/WorkOrderSets__x/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>StartDate</description>
    <externalDeveloperName>StartDate</externalDeveloperName>
    <label>StartDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>