force-app/main/default/objects/WorkOrderSets__x/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <description>StartTime</description>
    <externalDeveloperName>StartTime</externalDeveloperName>
    <label>StartTime</label>
    <length>128</length>
    <type>Text</type>
</CustomField>