force-app/main/default/objects/WorkOrderSets__x/fields/StatusProfile__c.field-meta.xml
<CustomField>
    <fullName>StatusProfile__c</fullName>
    <description>StatusProfile</description>
    <externalDeveloperName>StatusProfile</externalDeveloperName>
    <label>StatusProfile</label>
    <length>128</length>
    <type>Text</type>
</CustomField>