force-app/main/default/objects/WorkOrderSets__x/fields/SystemCondition__c.field-meta.xml
<CustomField>
    <fullName>SystemCondition__c</fullName>
    <description>SystemCondition</description>
    <externalDeveloperName>SystemCondition</externalDeveloperName>
    <label>SystemCondition</label>
    <length>128</length>
    <type>Text</type>
</CustomField>