force-app/main/default/objects/WorkOrderSets__x/fields/TaskListGroup__c.field-meta.xml
<CustomField>
    <fullName>TaskListGroup__c</fullName>
    <description>TaskListGroup</description>
    <externalDeveloperName>TaskListGroup</externalDeveloperName>
    <label>TaskListGroup</label>
    <length>128</length>
    <type>Text</type>
</CustomField>