force-app/main/default/objects/WorkOrderSets__x/fields/UserStatus__c.field-meta.xml
<CustomField>
    <fullName>UserStatus__c</fullName>
    <description>UserStatus</description>
    <externalDeveloperName>UserStatus</externalDeveloperName>
    <label>UserStatus</label>
    <length>128</length>
    <type>Text</type>
</CustomField>