force-app/main/default/objects/WorkOrderSets__x/fields/WcaStatus__c.field-meta.xml
<CustomField>
    <fullName>WcaStatus__c</fullName>
    <description>WcaStatus</description>
    <externalDeveloperName>WcaStatus</externalDeveloperName>
    <label>WcaStatus</label>
    <length>128</length>
    <type>Text</type>
</CustomField>